--- a/index.html
+++ b/index.html
@@ -261,8 +261,10 @@
       <div class="quest-container">
         <div class="quest-card">
           <div>
-            <h2>Would I have to pay to enroll for the training?</h2>
-            <p>
+            <h2 class="question">
+              Would I have to pay to enroll for the training?
+            </h2>
+            <p class="answer">
               No, the program is completely free thanks to Ingressive For Good
             </p>
           </div>
@@ -270,8 +272,10 @@
         </div>
         <div class="quest-card">
           <div>
-            <h2>What are the things I would need to participate?</h2>
-            <p>
+            <h2 class="question">
+              What are the things I would need to participate?
+            </h2>
+            <p class="answer">
               You'll need a laptop, internet connection and the willingness to
               learn through collaboration and mentorship.
             </p>
@@ -280,8 +284,8 @@
         </div>
         <div class="quest-card">
           <div>
-            <h2>What happens if i join and I’m not active?</h2>
-            <p>
+            <h2 class="question">What happens if i join and I’m not active?</h2>
+            <p class="answer">
               Participants who join the program and stop engaging will be given
               the chance to catch up. You'll also be assigned a 'study-mate' and
               mentor to help you. However, there is the possibility of not being
@@ -292,10 +296,10 @@
         </div>
         <div class="quest-card">
           <div>
-            <h2>
+            <h2 class="question">
               Can I switch from the part-time track to full-time and vice versa?
             </h2>
-            <p>
+            <p class="answer">
               Unfortunately, no, you cannot switch from part-time to full-time
               and vice-versa
             </p>
@@ -304,8 +308,8 @@
         </div>
         <div class="quest-card">
           <div>
-            <h2>Will I get paid?</h2>
-            <p>
+            <h2 class="question">Will I get paid?</h2>
+            <p class="answer">
               We reward some participants who complete tasks early, however,
               this is not a weekly reward. All the work that will be done during
               the program are hypothetical.
@@ -423,5 +427,6 @@
         </div>
       </div>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
