--- a/index.html
+++ b/index.html
@@ -259,33 +259,33 @@
       </div>
 
       <div class="quest-container">
-        <div class="quest-card">
+        <div class="quest-card" id="quest">
           <div>
             <h2 class="question">
               Would I have to pay to enroll for the training?
             </h2>
-            <p class="answer">
+            <p class="answer" id="answer">
               No, the program is completely free thanks to Ingressive For Good
             </p>
           </div>
           <span>&plus;</span>
         </div>
-        <div class="quest-card">
+        <div class="quest-card" id="quest">
           <div>
             <h2 class="question">
               What are the things I would need to participate?
             </h2>
-            <p class="answer">
+            <p class="answer" id="answer">
               You'll need a laptop, internet connection and the willingness to
               learn through collaboration and mentorship.
             </p>
           </div>
           <span>&plus;</span>
         </div>
-        <div class="quest-card">
+        <div class="quest-card" id="quest">
           <div>
             <h2 class="question">What happens if i join and I’m not active?</h2>
-            <p class="answer">
+            <p class="answer" id="answer">
               Participants who join the program and stop engaging will be given
               the chance to catch up. You'll also be assigned a 'study-mate' and
               mentor to help you. However, there is the possibility of not being
@@ -294,22 +294,22 @@
           </div>
           <span>&plus;</span>
         </div>
-        <div class="quest-card">
+        <div class="quest-card" id="quest">
           <div>
             <h2 class="question">
               Can I switch from the part-time track to full-time and vice versa?
             </h2>
-            <p class="answer">
+            <p class="answer" id="answer">
               Unfortunately, no, you cannot switch from part-time to full-time
               and vice-versa
             </p>
           </div>
           <span>&plus;</span>
         </div>
-        <div class="quest-card">
+        <div class="quest-card" id="quest">
           <div>
             <h2 class="question">Will I get paid?</h2>
-            <p class="answer">
+            <p class="answer" id="answer">
               We reward some participants who complete tasks early, however,
               this is not a weekly reward. All the work that will be done during
               the program are hypothetical.
